# fda-recall-surveillance

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.json
alembic/: env.py
scripts/: capture_screenshots.py  demo_analytics.py  demo_dashboard.py  generate_report.py  init_db.sql  run_backfill.py  run_daily.py
src/: config.py  scheduler.py
src/analytics/: __init__.py  categorize.py  correlation.py  high_risk.py  queries.py  reports.py  risk_scoring.py  temporal.py
src/ingestion/: __init__.py  backfill.py  fda_client.py  fda_scraper.py  normalizer.py  pipeline.py  validator.py
src/models/: __init__.py  base.py  firm.py  ingestion_log.py  recall.py
src/monitoring/: app.py
src/monitoring/pages/: analytics_overview.py  coverage.py  data_quality.py  executive_summary.py  pipeline_health.py  risk_dashboard.py
tests/: conftest.py  test_analytics_categorize.py  test_analytics_correlation.py  test_analytics_high_risk.py  test_analytics_reports.py  test_analytics_risk_scoring.py  test_analytics_temporal.py  test_fda_client.py  test_fda_scraper.py  test_normalizer.py  test_pipeline.py  test_validator.py
tests/sample_responses/: device_recall.json  drug_enforcement.json  food_enforcement.json
