[project]
name = "fda-recall-surveillance"
version = "0.1.0"
description = "Automated FDA drug/device/food recall surveillance pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "apscheduler>=3.10",
    "streamlit>=1.35",
    "plotly>=5.22",
    "pandas>=2.2",
    "scipy>=1.13",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the real FDA API (deselect with -m 'not integration')",
]
